thay đổi nghĩa dễ hiểu hơn (Mac Render)

--- a/settings.html
+++ b/settings.html
@@ -273,7 +273,7 @@
                 </label>
                 <br></br>
                 <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="macRender">
-                    <span class="mdl-switch__label">Mac Render</span>
+                    <span class="mdl-switch__label">Hiển thị web như máy Mac</span>
                     <input type="checkbox" id="macRender" class="mdl-switch__input">    
                 </label>
             </div>
