Cập nhật No-ads proxy

--- a/settings.html
+++ b/settings.html
@@ -399,7 +399,7 @@
             //# sourceMappingURL=mdl-selectfield.min.js.map
 
             switch (settings.get("settings.nvProxy")) {
-                case 'http://sv.kt-browser.com/no-ads.pac':
+                case 'http://kt-browser.com/no-ads.pac':
                     $('#VPNSelector').val("1")
                     break
                 case 'http://kt-browser.com/Singapore.pac':
@@ -563,7 +563,7 @@
                 }
                 switch (VPNSelector.value) {
                     case "1":
-                        proxyValue = 'http://sv.kt-browser.com/no-ads.pac'
+                        proxyValue = 'http://kt-browser.com/no-ads.pac'
                         break
                     case "2":
                         proxyValue = 'http://kt-browser.com/Singapore.pac'
