--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
             <script src="js/jquery/autoTooltip.plugin.jQuery.min.js"></script>
             <script>
                 if (window.module) module = window.module;
+            </script>
+            <script>
                 $(document).on("click", ".toast_material", function () {
                     if ($('.toast_open').length) {
                         $('.toast_material').removeClass("fadeInUp");
@@ -518,7 +520,6 @@
                             $('.toast_material').addClass("fadeOutDown");
                         }, 5000);
                     } else {
-                        console.log(heightStyle);
                         $('body').append('<div class="toast_material toast_open animated fadeInUp" style="' +
                             positionStyle + ';text-align:' + alignStyle + ';' + heightStyle +
                             '"><p style="direction:' + directionStyle + '">' + contentText + '</p></div>');
@@ -528,6 +529,8 @@
                         }, 5000);
                     }
                 };
+            </script>
+            <script>
                 Array.prototype.forEach || (Array.prototype.forEach = function (r, t) {
                     var o, n;
                     if (null === this) throw new TypeError(" this is null or not defined");
@@ -539,6 +542,8 @@
                         n in e && (a = e[n], r.call(o, a, n, e)), n++
                     }
                 });
+            </script>
+            <script>
                 ! function (e, n) {
                     var t = function (e) {
                             var n = e.data[0],
@@ -593,11 +598,10 @@
             <script src="js/components/suggestions.js"></script>
             <script src="js/components/searchinput.js"></script>
             <script src="js/components/menu.js"></script>
-            <script src="js/modules/cena.js"></script>
-
             <script>
                 require(`electron-connect`).client.create()
-
+            </script>
+            <script>
                 function getSelectedTab() {
                     for (var i = 0; i < parent.tabCollection.length; i++) {
                         if (parent.tabCollection[i].selected) {
@@ -609,7 +613,7 @@
                     $(".windowbutton").tooltip();
                     $(".material-icons").tooltip();
                     $(".closeBtn").tooltip();
-
+                    
                     var scroll = false;
                     var launcherMaxHeight = 396;
                     var launcherMinHeight = 296;
@@ -678,6 +682,7 @@
                     });
                 });
             </script>
+            <script src="js/modules/cena.js"></script>
 
             <div class="app-launcher" style="display: none;">
                 <div class="apps">
@@ -760,7 +765,5 @@
                     </ul>
                 </div>
             </div>
-
 </body>
-
 </html>
