--- a/downloads.html
+++ b/downloads.html
@@ -46,7 +46,7 @@
             <div class="border5"></div>
         </div>
         </script>
-        <div class="instances" id="instances" style="position: relative; top: 0;">
+        <div class="instances" id="instances" style="position: relative; top: 0; margin-left: 10px; margin-top: 5px;">
             tính năng này hiện chưa hoàn thiện :'(
         </div>
         <div>
