Cập nhật chế độ đọc tin

--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
         <link rel="stylesheet" href="js/materialdesign/css/materialdesign.css" type="text/css" />
         <link href="css/ripple.css" rel="stylesheet" type="text/css" />
         <style>
+            .mb-title, .mb-content {
+                -webkit-touch-callout: none;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                cursor: default;
+            }
+
+            .mb-buttons {
+                -webkit-touch-callout: none;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+            }
+
             .app-launcher {
                 position: absolute;
                 margin-top: 5px;
