--- a/licenses.html
+++ b/licenses.html
@@ -75,6 +75,12 @@
       <li class="list-item-dai">
         <a href="https://userstyles.org/styles/136322/global-white-black-night-mode">Global White-Black night mode - Павел Зегельман (CC BY-NC-SA 4.0)</a>
       </li>
+      <li class="list-item">
+        <a href="https://github.com/mozilla/readability">Readability.js (Apache License 2.0)</a>
+      </li>
+      <li class="list-item">
+        <a href="https://github.com/minbrowser/min">Min Browser - Reader Mode (Apache License 2.0)</a>
+      </li>
     </ul>
   </section>
 
