Cập nhật contextmenu cho tabbar

--- a/settings.html
+++ b/settings.html
@@ -275,7 +275,7 @@
         <div class="maindiv">
             <div class="titlebar" id="titlebar">
                 <div class="draggable">
-                    <label style="float: left; color: #424242; margin-top: 3px; margin-left: 20px;">Cài đặt KT Browser</label>
+                    <label style="float: left; color: #424242; margin-top: 3px; margin-left: 20px;">Cài đặt</label>
                 </div>
                 <div data-tooltip-text="Đóng cửa sổ" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
                 <div data-tooltip-text="Phóng to cửa sổ" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
@@ -341,6 +341,13 @@
                     <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="macRender">
                         <span class="mdl-switch__label">Làm đậm phông chữ khi duyệt web (Mac Render)</span>
                         <input type="checkbox" id="macRender" class="mdl-switch__input">    
+                    </label>
+                </div>
+                <div class="pad">
+                    <h5>Quản lí thẻ:</h5>
+                    <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="hardalc">
+                        <span class="mdl-switch__label">Thoát cửa sổ trình duyệt khi đóng thẻ cuối cùng</span>
+                        <input type="checkbox" id="hardalc" class="mdl-switch__input">    
                     </label>
                 </div>
                 <div class="pad">
