--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
                 font-family: inherit;
                 margin: 0;
                 width: 100%;
+                -webkit-touch-callout: none;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                cursor: default;
             }
 
             @media (max-width: 768px) {
