Cập nhật tính năng chặn quảng cáo (abplist)

--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
             <script src="js/components/suggestions.js"></script>
             <script src="js/components/searchinput.js"></script>
             <script src="js/components/menu.js"></script>
+
             <script>
                 require(`electron-connect`)
                     .client.create()
@@ -817,7 +818,8 @@
                     });
             </script>
             <script src="js/modules/cena.js"></script>
-
+            <script src="js/adblock/filtering.js"></script>
+            
             <div class="app-launcher" style="display: none;">
                 <div class="apps">
                     <ul class="first-set">
