--- a/licenses.html
+++ b/licenses.html
@@ -81,6 +81,12 @@
       <li class="list-item">
         <a href="https://github.com/minbrowser/min">Min Browser - Reader Mode (Apache License 2.0)</a>
       </li>
+      <li class="list-item">
+        <a href="https://github.com/minbrowser/min">Min Browser - ADBlock Script (Apache License 2.0)</a>
+      </li>
+      <li class="list-item">
+        <a href="https://github.com/bbondy/abp-filter-parser">JavaScript Adblock Plus filter parser (Mozilla Public License 2.0)</a>
+      </li>
     </ul>
   </section>
 
