Cập nhật Night Mode cho Reader Mode

--- a/newtab.html
+++ b/newtab.html
@@ -467,7 +467,7 @@
         <form id="searchForm" method="get" onSubmit="return doSearch();" action="http://www.google.com.vn/search">
             <div class="mat-div">
                 <label for="query" class="mat-label">Bạn cần tìm gì ?</label>
-                <input class="mat-input" type="text" name="query" autocomplete="on" onUpdate="recupValeur()" id="valeur">
+                <input class="mat-input" type="text" name="query" autocomplete="on" id="valeur">
                 <label for="search" class="fa fa-search"></label><input type="submit" id="search" />
             </div>
 
